# maxi-terminal-mcp

./: .gitignore  Cargo.toml
src/: cache.rs  elicitation.rs  file_ops.rs  interact.rs  lib.rs  main.rs  memory_client.rs  output.rs  parser.rs  parser.rs.bak  path_utils.rs  process.rs  rate_limit.rs  server.rs  server_new.rs  session.rs  shell.rs  task.rs
